--- a/WebVerduleros/appsettings.json
+++ b/WebVerduleros/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": { "VerdulerosContext": "Server=tcp:verduleros.database.windows.net,1433;Initial Catalog=BD Tercer Parcial;Persist Security Info=False;User ID=verduleros;Password=Passw0rd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" }
 }
